Добавлены тесты на мониторатор криптокошелька, также исправлена ошибка, в результате которой записывались мусорные данные в результате покупки продолжения ВПН.